--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:layout_height="match_parent"
+<LinearLayout android:orientation="vertical"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:text="The page no is 1"
-    android:gravity="center"
-    android:textSize="20sp"
-    android:id="@+id/postion"/>
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <TextView android:layout_height="100dp"
+        android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:text="The page no is 1"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:id="@+id/postion"/>
+
+</LinearLayout>
