--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,6 +50,7 @@
     <color name="lightblue2">#7db4cb</color>
     <color name="boamcolor">#787aa3</color>
     <color name="fulltransparent">#11000000</color>
+    <color name="lightbluesplash">#669cd9</color>
 
     <color name="sports">#9400D3</color>#9400D3
     <color name="sportsdark">#800080</color>
