--- a/app/src/main/res/layout/personality.xml
+++ b/app/src/main/res/layout/personality.xml
@@ -7,19 +7,27 @@
     android:layout_height="fill_parent"
     android:background="@color/backgroundcolor"
     android:orientation="vertical">
-
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/colorPrimary"
         android:minHeight="?actionBarSize">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:id="@+id/gps_popup">
+
+    </View>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
 
             <ImageView
                 android:contentDescription="@string/goback"
@@ -58,11 +66,10 @@
                 android:text="@string/zero"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
-
-
         </LinearLayout>
-    </android.support.v7.widget.Toolbar>
 
+    </LinearLayout>
+    </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
