--- a/app/src/main/res/layout/personality.xml
+++ b/app/src/main/res/layout/personality.xml
@@ -936,8 +936,7 @@
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:src="@drawable/cracker11" />
+                android:layout_marginStart="20dp" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -947,8 +946,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/cracker11" />
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -958,8 +956,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_toLeftOf="@+id/cracker2"
-                android:layout_toStartOf="@+id/cracker2"
-                android:src="@drawable/cracker11" />
+                android:layout_toStartOf="@+id/cracker2" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -970,8 +967,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_alignTop="@+id/cracker1"
                 android:layout_toEndOf="@id/cracker1"
-                android:layout_toRightOf="@+id/cracker1"
-                android:src="@drawable/cracker11" />
+                android:layout_toRightOf="@+id/cracker1" />
         </RelativeLayout>
 
         <View
