--- a/app/src/main/res/layout-normal/personality.xml
+++ b/app/src/main/res/layout-normal/personality.xml
@@ -938,8 +938,7 @@
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:src="@drawable/cracker11" />
+                android:layout_marginStart="20dp" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -949,8 +948,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/cracker11" />
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -960,8 +958,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_toLeftOf="@+id/cracker2"
-                android:layout_toStartOf="@+id/cracker2"
-                android:src="@drawable/cracker11" />
+                android:layout_toStartOf="@+id/cracker2" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -972,8 +969,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_alignTop="@+id/cracker1"
                 android:layout_toEndOf="@id/cracker1"
-                android:layout_toRightOf="@+id/cracker1"
-                android:src="@drawable/cracker11" />
+                android:layout_toRightOf="@+id/cracker1" />
         </RelativeLayout>
 
         <View
