--- a/app/src/main/res/layout-small/activity_main.xml
+++ b/app/src/main/res/layout-small/activity_main.xml
@@ -13,7 +13,12 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:id="@+id/gps_popup">
 
+    </View>
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
