--- a/app/src/main/res/layout-small/reveal.xml
+++ b/app/src/main/res/layout-small/reveal.xml
@@ -77,9 +77,8 @@
             android:id="@+id/usegems"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_weight="1"
-            android:drawableRight="@drawable/gems"
             android:drawableEnd="@drawable/gems"
+            android:drawableRight="@drawable/gems"
             android:gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -111,9 +110,8 @@
             android:id="@+id/watchvideo"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_weight="1"
-            android:drawableRight="@drawable/youtube_2"
             android:drawableEnd="@drawable/youtube_2"
+            android:drawableRight="@drawable/youtube_2"
             android:gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -123,24 +121,24 @@
             android:textSize="14sp"
             app:buttonColor="@color/white" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp" />
+        <!-- <View
+             android:layout_width="match_parent"
+             android:layout_height="2dp" />
 
-        <TextView
-            android:id="@+id/shop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/shopline"
-            android:textColor="@color/lightred"
-            android:textSize="14sp" />
+         <TextView
+             android:id="@+id/shop"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="center"
+             android:text="@string/shopline"
+             android:textColor="@color/lightred"
+             android:textSize="14sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp" />
+         <View
+             android:layout_width="match_parent"
+             android:layout_height="2dp" />-->
 
-        <info.hoang8f.widget.FButton
+        <!--<info.hoang8f.widget.FButton
             android:id="@+id/buyGems"
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -154,7 +152,7 @@
             android:text="@string/buyDiamond"
             android:textColor="@color/grey"
             android:textSize="14sp"
-            app:buttonColor="@color/white" />
+            app:buttonColor="@color/white" />-->
 
         <View
             android:layout_width="match_parent"
