--- a/app/src/main/res/layout-xlarge/personality.xml
+++ b/app/src/main/res/layout-xlarge/personality.xml
@@ -940,8 +940,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_height="105dp"
                 android:layout_marginLeft="100dp"
-                android:layout_marginStart="100dp"
-                android:src="@drawable/cracker11" />
+                android:layout_marginStart="100dp" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -952,8 +951,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="100dp"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/cracker11" />
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -964,8 +962,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginEnd="40dp"
                 android:layout_toLeftOf="@+id/cracker2"
-                android:layout_toStartOf="@+id/cracker2"
-                android:src="@drawable/cracker11" />
+                android:layout_toStartOf="@+id/cracker2" />
 
             <ImageView
                 android:contentDescription="@string/useless_alphabet_removed"
@@ -976,8 +973,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_alignTop="@+id/cracker1"
                 android:layout_toEndOf="@id/cracker1"
-                android:layout_toRightOf="@+id/cracker1"
-                android:src="@drawable/cracker11" />
+                android:layout_toRightOf="@+id/cracker1" />
         </RelativeLayout>
 
         <View
