--- a/app/src/main/res/layout/reveal.xml
+++ b/app/src/main/res/layout/reveal.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@color/transparent2" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,89 +29,98 @@
             android:textSize="30sp" />
 
 
-
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center">
+
             <info.hoang8f.widget.FButton
                 android:id="@+id/cance11"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:textColor="@color/white"
                 android:text="@string/cancel"
+                android:textColor="@color/white"
                 app:buttonColor="@color/cancelred" />
         </RelativeLayout>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:background="@color/transparent2"/>
+        android:background="@color/transparent2" />
+
     <TextView
+        android:id="@+id/costReavel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cost2gems"
-        android:textSize="25sp"
-        android:paddingTop="5dp"
-        android:id="@+id/costReavel"
-        android:textColor="@color/white"
         android:background="@color/transparent"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="@string/cost2gems"
+        android:textColor="@color/white"
+        android:textSize="25sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="@color/transparent"
+        android:orientation="vertical"
         android:padding="10dp">
+
         <View
             android:layout_width="match_parent"
-            android:layout_height="10dp"/>
+            android:layout_height="10dp" />
+
         <info.hoang8f.widget.FButton
+            android:id="@+id/usegems"
+            android:layout_width="match_parent"
+            android:layout_height="115dp"
+            android:drawableEnd="@drawable/gems"
+
+            android:drawableRight="@drawable/gems"
             android:gravity="center"
             android:paddingLeft="10dp"
-            android:paddingStart="10dp"
             android:paddingRight="10dp"
-
-            app:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:text="@string/useDiamond"
             android:textColor="@color/grey"
-            android:drawableRight="@drawable/gems"
-           android:drawableEnd="@drawable/gems"
-            android:id="@+id/usegems"
             android:textSize="19sp"
             app:buttonColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="115dp" />
+            app:paddingEnd="10dp" />
+
         <View
             android:layout_width="match_parent"
-            android:layout_height="7dp"/>
+            android:layout_height="7dp" />
+
         <TextView
             android:id="@+id/or"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/rewardline"
             android:gravity="center"
+            android:text="@string/rewardline"
             android:textColor="@color/lightred"
-            android:textSize="19sp"/>
+            android:textSize="19sp" />
+
         <View
             android:layout_width="match_parent"
-            android:layout_height="7dp"/>
+            android:layout_height="7dp" />
+
         <info.hoang8f.widget.FButton
+            android:id="@+id/watchvideo"
+            android:layout_width="match_parent"
+            android:layout_height="115dp"
+            android:drawableEnd="@drawable/youtube_2"
+            android:drawableRight="@drawable/youtube_2"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            app:paddingEnd="10dp"
-            android:drawableRight="@drawable/youtube_2"
-            android:drawableEnd="@drawable/youtube_2"
             android:paddingStart="10dp"
-            android:textSize="19sp"
             android:text="@string/watchvideo"
-            app:buttonColor="@color/white"
             android:textColor="@color/grey"
-            android:id="@+id/watchvideo"
-            android:layout_width="match_parent"
-            android:layout_height="115dp" />
-        <View
+            android:textSize="19sp"
+            app:buttonColor="@color/white"
+            app:paddingEnd="10dp" />
+        <!--<View
             android:layout_width="match_parent"
             android:layout_height="7dp"/>
         <TextView
@@ -138,9 +148,9 @@
             android:textSize="18sp"
             app:buttonColor="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="120dp" />
+            android:layout_height="120dp" />-->
         <View
             android:layout_width="match_parent"
-            android:layout_height="15dp"/>
+            android:layout_height="15dp" />
     </LinearLayout>
 </LinearLayout>
